--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "@babel/eslint-plugin": "7.14.5",
     "@babel/preset-typescript": "7.16.0",
     "@storybook/addon-actions": "^6.4.4",
+    "@storybook/addon-docs": "^6.4.8",
     "@storybook/addon-essentials": "^6.4.4",
     "@storybook/addon-links": "^6.4.4",
     "@storybook/react": "^6.4.4",
