--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "keywords": [],
   "browser": "src/index.js",
   "scripts": {
-    "start": "webpack serve --open --mode development",
+    "start": "webpack serve --hot --no-live-reload --mode development",
+    "serve": "webpack serve --open --mode development",
     "build:storybook": "build-storybook",
     "build:app": "webpack --mode production",
     "test": "jest",
