--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "7.16.4",
     "@babel/preset-react": "7.16.0",
     "@babel/runtime-corejs3": "7.16.3",
+    "@js-temporal/polyfill": "0.3.0",
     "@mdx-js/loader": "1.6.22",
     "babel-loader": "8.2.3",
     "classnames": "2.3.1",
